--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -74,8 +74,8 @@ section {
     background-repeat: no-repeat; 
     margin-top: 0;
     margin-bottom: 0;
-    margin-left: 0;
-    margin-right: 15px;
+    margin-left: 5px;
+    margin-right: 0;
 }
 
 .hlink:hover {
