--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -82,6 +82,28 @@ section {
     border: solid teal;
 }
 
+.menulink {
+    border: solid white;
+    border-radius: 80px;
+    display: inline-block; 
+    width: 80px; 
+    height: 80px; 
+    padding:0; 
+    overflow: hidden; 
+    background-color: white;
+    background-size: cover; 
+    background-position: center; 
+    background-repeat: no-repeat; 
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: 5px;
+    margin-right: 0;
+}
+
+.menulink:hover {
+    border: solid teal;
+}
+
 .qlink {
     border: solid white;
     border-radius: 25px;
@@ -104,5 +126,57 @@ section {
 .link_section {
     margin-top: 5px; 
     margin-bottom: 5px;
+}
+
+.droplink {
+    color: white; 
+    padding: 10px 15px; 
+    text-decoration: none; 
+    display: block;
+}
+
+#dropdown {
+    padding-bottom: 0; 
+}
+
+#dropdown ul,
+#dropdown2 ul {
+    display: none; /* Hide the menu by default */
+    position: absolute;
+    background-color: gray;
+    min-width: 160px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    border-radius: 5px;
+    padding: 0;
+    list-style: none;
+    margin:0;
+}
+
+/* Show the dropdown when hovering */
+#dropdown:hover ul,
+#dropdown2:hover ul {
+    display: block;
+}
+
+
+#dropdown:hover .dropbtn {
+    border: 2px solid teal;
+}
+
+#dropdown2 {
+    padding-bottom: 10px; 
+}
+
+#dropdown2:hover .dropbtn2 {
+    border: 2px solid teal;
+}
+
+#dropdown ul li a:hover {
+    color: teal; /* Ensures hover effect only applies to links in #dropdown */
+}
+
+#dropdown2 ul li a:hover {
+    color: teal; /* Ensures hover effect only applies to links in #dropdown */
 }
 
